--- a/projetinhos/nature-travel/css/style.css
+++ b/projetinhos/nature-travel/css/style.css
@@ -1,3 +1,7 @@
 @import url('./global.css');
 @import url('./header.css');
 @import url('./apresentacao.css');
+@import url('./ultimas-noticias.css');
+@import url('./travel.css');
+@import url('./galeria-opcoes.css');
+@import url('./diversao.css');
