--- a/projetinhos/nature-travel/css/apresentacao.css
+++ b/projetinhos/nature-travel/css/apresentacao.css
@@ -1,6 +1,5 @@
 .section-apresentacao-bg {
     background-image: url('../img/bg-nature-01.jpg');
-    /*Aqui*/
     box-sizing: border-box;
     background-size: cover;
     background-position-x: 50%;
@@ -15,38 +14,33 @@
 }
 
 .container-apresentacao h5 {
-    font-weight: 700px;
-    font-size: 20px;
+    font-size: 1.25rem;
+    font-weight: 700;
     text-transform: uppercase;
-    letter-spacing: 7px;
-    padding-top: 100px;
+    letter-spacing: 0.306rem;
+    padding-top: 8.125rem;
+    margin: 0px;
 }
 
 .container-apresentacao h1 {
-    font-weight: 700px;
-    font-size: 70px;
-    line-height: 66px;
+    font-weight: 600;
+    font-size: 3.75rem;
+    /*line-height: 66px;*/
     text-transform: lowercase;
-    padding-bottom: 40px;
+    padding-bottom: 1.875rem;
+    padding-top: 1.25rem;
 }
 
-.container-apresentacao a {
-    padding: 15px;
-}
-
-/*AQUI*/
 .container-apresentacao p {
     background-color: rgb(246, 123, 111);
     color: white;
-    padding: 15px;
-    border-radius: 25px;
-    font-size: 20px;
-    letter-spacing: 1px;
+    padding: 0.813rem 1.875rem;
+    border-radius: 0.938rem;
+    font-size: 1.063rem;
+    letter-spacing: 0.063rem;
 }
 
 .container-apresentacao img {
-    width: 460px;
-    padding-top: 40px;
+    width: 28.75rem;
+    padding-top: 2.813rem;
 }
-
-/*Teste*/
